feat: github package

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "脚手架",
     "项目搭建"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "author": "yujihu",
   "license": "MIT",
   "bugs": {
